--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.16",
     "framer-motion": "^10.16.5",
