--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.16",
     "framer-motion": "^10.16.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-spinners": "^0.13.8",
     "tailwindcss": "^3.3.5"
   },
