--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.16",
     "framer-motion": "^10.16.5",
+    "hamburger-react": "^2.5.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
