--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.16",
+    "barba.js": "^1.0.0",
     "framer-motion": "^10.16.5",
     "hamburger-react": "^2.5.0",
     "postcss": "^8.4.31",
