--- a/package.json
+++ b/package.json
@@ -12,30 +12,31 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
-    "autoprefixer": "^10.4.16",
     "barba.js": "^1.0.0",
     "framer-motion": "^10.16.5",
     "hamburger-react": "^2.5.0",
     "lucide-react": "^0.460.0",
-    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.20.0",
-    "react-spinners": "^0.13.8",
-    "tailwindcss": "^3.3.5"
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.5.6",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^4.1.17",
     "vite": "^4.5.3"
   }
 }
